tests/NormalTests/paczka1/fuzzy1/99007507.err
Error in line 1: PGt8F5kgOD S585 81,9
Error in line 4: E17P1 A390 81,5
Error in line 2: MkuxMw87u7 S585 56,3
Error in line 19: A390 A390 70,8
Error in line 20: MkuxMw87u7 S606 12,0
Error in line 7: I2EoVl A390 27,8
Error in line 28: I2EoVl S585 11,0
Error in line 32: E17P1 A390 9,7
Error in line 12: PGt8F5kgOD S606 8,6
Error in line 33: K5bpV8RU S585 88,2
